# Engine-mk1

./: .clang-format  .clang_complete  .gitignore  .travis.yml  AISystem.h  AgentComponent.h  CMakeLists.txt  CMakeSettings.json  ColliderComponent.h  Component.cpp  Component.h  EventStream.h  LocomotionComponent.h  ObjectPool.h  PhysicsSystem.h  README.md  RenderComponent.h  Space.cpp  SteeringComponent.h  TaskScheduler.h  TransformComponent.cpp  TransformComponent.h  _component_8hpp_source.html  _entity_8hpp_source.html  _event_stream_8hpp_source.html  _events_core_8hpp_source.html  _graph_8hpp_source.html  _lua_core_8hpp_source.html  _lua_framework_8hpp_source.html  _misc_8hpp_source.html  _object_pool_8hpp_source.html  _planner_8hpp_source.html  _space_8hpp_source.html  _system_8hpp_source.html  _task_scheduler_8hpp_source.html  annotated.html  build.json  build.py  classes.html  classrz_1_1core_1_1_component-members.html  (+191 more)
Release/engine-mk1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  engine-mk1.lastbuildstate  engine-mk1.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cmake_modules/: FindSFML.cmake
core/: CMakeLists.txt  Component.cpp  Component.hpp  Entity.hpp  EventData.hpp  EventStream.cpp  EventStream.hpp  EventsCore.hpp  Graph.hpp  LuaCore.hpp  LuaHooks.hpp  Misc.hpp  ObjectPool.hpp  Planner.cpp  Planner.hpp  Space.cpp  Space.hpp  System.cpp  System.hpp  main.cpp
docs/: Doxyfile  core.md  custom.css  eventstream.md  graph.md  mainpage.md  objectpool.md  planner.md  system.md  taskscheduler.md
docs/dot/: core_data.dot  core_loop.dot  graph_dfs.dot  graph_initial.dot  plan.dot
framework/: CMakeLists.txt  EventStream.cpp  EventStream.hpp  Graph.hpp  LuaFramework.hpp  Misc.cpp  Misc.hpp  ObjectPool.hpp  Planner.cpp  Planner.hpp  TaskScheduler.cpp  TaskScheduler.hpp
game/: AnimalComponent.hpp  CMakeLists.txt  GameSystem.cpp  GameSystem.hpp  InputSystem.cpp  PhysicsSystem.cpp  PhysicsSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  ShapeComponent.cpp  ShapeComponent.hpp  TransformComponent.cpp  TransformComponent.hpp  config.hpp  main.cpp
game/phase_1/: CMakeLists.txt  GameSystem.cpp  GameSystem.hpp  InputSystem.cpp  LuaHooks.hpp  RenderSystem.cpp  RenderSystem.hpp  actions.lua  agents.lua  deposit.lua  game.lua  homebase.lua  input.lua  main.cpp  nodal.lua  renderer.lua  steering.lua
game/phase_2/: CMakeLists.txt  ColliderComponent.hpp  GameSystem.cpp  GameSystem.hpp  InputSystem.cpp  InputSystem.hpp  LuaHooks.hpp  MotionComponent.cpp  MotionComponent.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  ShapeComponent.cpp  ShapeComponent.hpp  TransformComponent.cpp  TransformComponent.hpp  actions.lua  agents.lua  buildings.lua  config.hpp  game.lua  input.lua  luatraverse.lua  main.cpp  steering.lua
game_v1/: AnimalComponent.cpp  CMakeLists.txt  GameSystem.cpp  GameSystem.hpp  InputSystem.cpp  InputSystem.hpp  MotionComponent.cpp  MotionComponent.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  TransformComponent.cpp  TransformComponent.hpp  config.hpp  main.cpp
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  functions_0.js  (+37 more)
src/: AISystem.h  CMakeLists.txt  Component.cpp  Component.h  Component.hpp  Entity.h  Entity.hpp  EventData.hpp  EventStream.cpp  EventStream.h  EventStream.hpp  Graph.h  Graph.hpp  Misc.h  Misc.hpp  ObjectPool.h  ObjectPool.hpp  PhysicsSystem.cpp  PhysicsSystem.h  PhysicsSystem.hpp  RenderComponent.cpp  RenderComponent.hpp  RenderSystem.h  RenderSystem.hpp  Space.cpp  Space.h  Space.hpp  System.cpp  System.h  System.hpp  TaskScheduler.cpp  TaskScheduler.hpp  TransformComponent.cpp  TransformComponent.hpp  main.cpp
tests/: CMakeLists.txt  main.cpp  testComponent.cpp  testEntity.cpp  testEventStream.cpp  testGraph.cpp  testObjectPool.cpp  testPlanner.cpp  testSpace.cpp  testSpace.hpp  testSystem.cpp  testSystem.hpp  testTaskScheduler.cpp
